# MyCMakeTemplate

./: CMakeLists.txt
cmakes/: Modules.cmake
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  index.cmake
modules/core/src/: core.cpp  core.hpp
modules/test/: CMakeLists.txt  index.cmake
modules/test/src/: main.cpp  main.hpp
